# alfred-workflow-rust-project

./: .env  .gitignore  Cargo.toml  README.md
example/fatal_error/: Cargo.toml
example/fatal_error/src/: main.rs
example/set_config/: Cargo.toml
example/set_config/src/: main.rs
example/show_config/: Cargo.toml
example/show_config/src/: main.rs
example/simple/: Cargo.toml
example/simple/src/: main.rs
src/: alfred.rs  alfred_logger.rs  alfred_web.rs  common.rs  icon.rs  lib.rs  version.rs  workflow.rs  workflow_background.rs  workflow_cache.rs  workflow_database.rs  workflow_item.rs  workflow_keychain.rs  workflow_updater.rs
