[package]
name = "alfred-workflow-rust-project"
version = "0.0.1-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
security-framework = "2.6.1"
serde_json = "1.0"
[dev-dependencies]
dotenv = "0.15.0"