[package]
name = "alfred-workflow-rust-project"
version = "0.0.1-alpha"
authors = ["christmic <christophermins@gmail.com>"]
description = "A library for alfred workflow(In Alpha Stage)"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
security-framework = "2.6.1"
serde_json = "1.0"
nix = "0.9.0"
log = "0.4.16"
log4rs = { version = "1.0.0", features = ["rolling_file_appender"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
[dev-dependencies]
dotenv = "0.15.0"