[package]
name = "alfred-workflow-rust-project"
version = "0.0.3-alpha"
authors = ["christmic <christophermins@gmail.com>"]
description = "A library for alfred workflow(In Alpha Stage)"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
security-framework = "2.6.1"
serde_json = "1.0.81"
nix = "0.24.1"
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["rolling_file_appender"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
#rusqlite = { version = "0.27.0", features = ["bundled"] }
pbkdf2 = { version = "0.11.0", features = ["sha1", "parallel"] }
url = "2.2.2"
sqlite = "0.26.0"
[dev-dependencies]
dotenv = "0.15.0"
